--- a/src/MainLayout.fxml
+++ b/src/MainLayout.fxml
@@ -8,12 +8,12 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="Online: " textFill="#15ff00">
+      <Label fx:id="label_Online" text="Online : " textFill="#15ff00">
          <font>
             <Font size="13.0" />
          </font>
       </Label>
-      <ListView VBox.vgrow="ALWAYS" />
+      <ListView fx:id="listview_OnlineUsers" VBox.vgrow="ALWAYS" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" />
